--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.27.0"
-# crossterm = "0.25"
-# tui = { version = "0.19", default-features = false, features = ['crossterm'] }
-ironcalc = { version = "0.1.0", path = "../ironcalc/xlsx" }
+ironcalc = { git = "https://github.com/ironcalc/IronCalc", version = "0.1.0"}
 ratatui = "0.26.0"
+tui-input = "0.8.0"
